<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/headingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="16dp"
        android:text="@string/heading_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <!-- Title -->
            <EditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/title"
                android:inputType="textCapSentences"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headingTextView" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleInput" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:clickable="true"
                android:focusable="false"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/date"
                android:inputType="none"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionInput" />

            <Spinner
                android:id="@+id/spinnerTodoType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/todo_type"
                android:inputType="text"
                android:padding="16dp"
                android:prompt="@string/todo_type"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />

            <RadioGroup
                android:id="@+id/radioGroupPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerTodoType">

                <RadioButton
                    style="@style/RoundedRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="12dp"
                    android:text="@string/todo_priority_high"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <RadioButton
                    style="@style/RoundedRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="12dp"
                    android:text="@string/todo_priority_medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <RadioButton
                    style="@style/RoundedRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="12dp"
                    android:text="@string/todo_priority_low"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </RadioGroup>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:backgroundTint="@color/light_green"
                android:text="@string/save"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupPriority" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>